core/interpreter/src/test/resources/Interpreter_PP_Classes_TestSuite_External/PP/error/inheritance/rep/reperr-29.vpp.entry
new B().Test() = 'd' -- Run-Time Error 258: Construct is multiple defined within the current scope